# midas_file_unpacker_app

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_sampic_scalars  test_sampic_scalars.cpp  test_scalars  test_scalars.cpp  test_struct_sizes  test_struct_sizes.cpp
cmake/: CPMConfig.cmake
config/: logger.json  main_pipeline.json
config/unpacker_configs/: HDSoC_config.json  HDSoC_data_bank.json  HDSoC_timing_bank.json
config/unpacker_configs/HDSoC/: data_bank.json  data_bank_efficient.json  data_bank_explicit.json  timing_bank.json  timing_bank_explicit.json
config/unpacker_pipelines/HDSoC/: default_unpacking_pipeline.json
config/unpacker_pipelines/SAMPIC/: default_unpacking_pipeline.json
include/midas_file_unpacker_app/: CLIOptions.h  UnpackerApp.h
include/midas_file_unpacker_app/profiles/: HdSocProfile.h  PipelineProfile.h  ProfileRegistry.h  SampicProfile.h
notebooks/: README.md  example.ipynb  plot_sampic_waveforms.ipynb  quick_waveform_plot.ipynb  windows_check.ipynb
notebooks/HDSoC/: example.ipynb  plot_nalu_waveforms.ipynb  waveform_packet_window_positions.ipynb  windows_check.ipynb
notebooks/SAMPIC/: noise_filtering_waveforms.ipynb  plot_sampic_waveforms.ipynb  quick_waveform_plot.ipynb  timing_analysis.ipynb
scripts/: run.sh
src/: CLIOptions.cpp  UnpackerApp.cpp  main.cpp
src/profiles/: HdSocProfile.cpp  ProfileRegistry.cpp  SampicProfile.cpp
